work done on 225

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,3 @@
 {
-  "/js/app.js": "/js/app.0636420f1b0e185f4773.js",
-  "/css/app.css": "/css/app.19b7018ed99806a01b8b.css"
+  "/js/app.js": "/js/app.776552af90c3b86c2099.js"
 }
