--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-  "/js/app.js": "/js/app.776552af90c3b86c2099.js"
+  "/js/app.js": "/js/app.0636420f1b0e185f4773.js",
+  "/css/app.css": "/css/app.32bbe9e05530362e808b.css"
 }
