too many changes

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+BONUSLY_UNWANTED=null
 BONUSLY_TOKEN=null
+BONUSLY_LOGO_IMG_FILE=null
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
