added a new key to .env file for d-stairs users added to config/bonusly modiefied makeUsers on bonuslyHelper added new remveDownstairsUsers

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 BONUSLY_UNWANTED=null
+BONUSLY_DS=null
 BONUSLY_TOKEN=null
 BONUSLY_LOGO_IMG_FILE=null
 
